--- a/src/RookieShop.IdentityService/RookieShop.IdentityService.csproj
+++ b/src/RookieShop.IdentityService/RookieShop.IdentityService.csproj
@@ -12,8 +12,8 @@
 		<PackageReference Include="Serilog.AspNetCore" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" />
 		<PackageReference Include="Duende.IdentityServer.AspNetIdentity" />
-		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
 		<PackageReference Include="EntityFrameworkCore.Exceptions.PostgreSQL" />
+		<PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" />
 	</ItemGroup>
 
 	<ItemGroup>
