--- a/src/RookieShop.Persistence/RookieShop.Persistence.csproj
+++ b/src/RookieShop.Persistence/RookieShop.Persistence.csproj
@@ -8,8 +8,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Aspire.Npgsql" />
+		<PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" />
 		<PackageReference Include="EFCore.NamingConventions" />
-		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
 		<PackageReference Include="EntityFrameworkCore.Exceptions.PostgreSQL" />
 	</ItemGroup>
 
