style (storefront): add order history

--- a/ui/storefront/RookieShop.Storefront.csproj
+++ b/ui/storefront/RookieShop.Storefront.csproj
@@ -18,6 +18,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Ardalis.Result.AspNetCore" />
+		<PackageReference Include="LigerShark.WebOptimizer.Core" />
 	</ItemGroup>
 
 	<ItemGroup>
