--- a/ui/backoffice/package.json
+++ b/ui/backoffice/package.json
@@ -51,6 +51,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-table": "^8.16.0",
+    "@vercel/otel": "^1.8.3",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -61,8 +62,8 @@
     "inversify": "^6.0.2",
     "jotai": "^2.8.0",
     "lodash": "^4.17.21",
-    "next": "14.2.3",
     "lucide-react": "^0.378.0",
+    "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "next-themes": "^0.3.0",
     "react": "^18",
