chore: update package

--- a/src/RookieShop.AppHost/RookieShop.AppHost.csproj
+++ b/src/RookieShop.AppHost/RookieShop.AppHost.csproj
@@ -20,15 +20,20 @@
 		<ProjectReference Include="..\RookieShop.IdentityService\RookieShop.IdentityService.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Update="SonarAnalyzer.CSharp">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
+
 	<Target Name="RestoreNpm" BeforeTargets="Build" Condition=" '$(DesignTimeBuild)' != 'true' ">
 		<ItemGroup>
 			<PackageJsons Include="..\..\ui\*\package.json" />
 		</ItemGroup>
-		<Message Importance="Normal"
-		         Text="Installing node packages for %(PackageJsons.RelativeDir)"
+		<Message Importance="Normal" Text="Installing node packages for %(PackageJsons.RelativeDir)"
 		         Condition="!Exists('%(PackageJsons.RootDir)%(PackageJsons.Directory)/node_modules')" />
-		<Exec Command="bun install"
-		      WorkingDirectory="%(PackageJsons.RootDir)%(PackageJsons.Directory)"
+		<Exec Command="bun install" WorkingDirectory="%(PackageJsons.RootDir)%(PackageJsons.Directory)"
 		      Condition="!Exists('%(PackageJsons.RootDir)%(PackageJsons.Directory)/node_modules')" />
 	</Target>
 
