--- a/tests/RookieShop.FunctionalTests/RookieShop.FunctionalTests.csproj
+++ b/tests/RookieShop.FunctionalTests/RookieShop.FunctionalTests.csproj
@@ -28,4 +28,11 @@
 		<Using Include="Ardalis.HttpClientTestExtensions" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Update="SonarAnalyzer.CSharp">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
+
 </Project>
