--- a/ui/storefront/appsettings.Development.json
+++ b/ui/storefront/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "OpenIdSettings": {
+    "ClientId": "store-front",
+    "ClientSecret": "secret"
   }
 }
