--- a/ui/backoffice/tsconfig.json
+++ b/ui/backoffice/tsconfig.json
@@ -12,6 +12,8 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "types": ["reflect-metadata"],
     "plugins": [
       {
