--- a/ui/backoffice/package.json
+++ b/ui/backoffice/package.json
@@ -51,6 +51,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-table": "^8.16.0",
+    "@types/uuid": "^9.0.8",
     "@vercel/otel": "^1.8.3",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
@@ -76,6 +77,7 @@
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "vaul": "^0.9.0",
     "zod": "^3.22.5"
   },
