--- a/ui/backoffice/package.json
+++ b/ui/backoffice/package.json
@@ -49,9 +49,11 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-table": "^8.16.0",
     "@types/uuid": "^9.0.8",
+    "@typescript-eslint/parser": "^7.10.0",
     "@vercel/otel": "^1.8.3",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
@@ -82,6 +84,8 @@
     "zod": "^3.22.5"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "ianvs/prettier-plugin-sort-imports",
+    "@tailwindcss/typography": "^0.5.13",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@types/lodash": "^4.17.0",
