--- a/ui/backoffice/package.json
+++ b/ui/backoffice/package.json
@@ -22,6 +22,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.51.1",
+    "@opentelemetry/resources": "^1.24.1",
+    "@opentelemetry/sdk-node": "^0.51.1",
+    "@opentelemetry/sdk-trace-node": "^1.24.1",
+    "@opentelemetry/semantic-conventions": "^1.24.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -55,7 +60,6 @@
     "@tanstack/react-table": "^8.16.0",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/parser": "^7.10.0",
-    "@vercel/otel": "^1.8.3",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -63,6 +67,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.2",
     "input-otp": "^1.2.4",
+    "install": "^0.13.0",
     "inversify": "^6.0.2",
     "jotai": "^2.8.0",
     "lodash": "^4.17.21",
