--- a/ui/backoffice/package.json
+++ b/ui/backoffice/package.json
@@ -76,6 +76,7 @@
     "next-auth": "^5.0.0-beta.18",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.12",
+    "rate-limiter-flexible": "^5.0.3",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
