fix: api ssl bug

--- a/src/RookieShop.ApiService/appsettings.Development.json
+++ b/src/RookieShop.ApiService/appsettings.Development.json
@@ -1,8 +1,21 @@
 {
+  "AzuriteSettings": {
+    "ContainerName": "rookieshop"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
+  },
+  "OpenIdSettings": {
+    "ClientId": "api-swagger-ui",
+    "ClientSecret": "secret"
+  },
+  "SmtpSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Email": "nguyenxuannhan.dev@gmail.com"
   }
 }
