--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,7 +5,6 @@
 		<AspnetVersion>8.0.5</AspnetVersion>
 		<ApiVersioningVersion>8.1.0</ApiVersioningVersion>
 		<EfVersion>8.0.5</EfVersion>
-		<TestcontainersVersion>3.8.0</TestcontainersVersion>
 		<XabarilVersion>8.0.1</XabarilVersion>
 		<PollyVersion>8.4.0</PollyVersion>
 		<AspireVersion>8.0.1</AspireVersion>
@@ -74,11 +73,6 @@
 		<PackageVersion Include="xunit" Version="2.8.1" />
 		<PackageVersion Include="xunit.runner.visualstudio" Version="2.8.1" />
 		<PackageVersion Include="XunitContext" Version="3.3.2" />
-		<!-- TestContainers -->
-		<PackageVersion Include="Testcontainers" Version="$(TestcontainersVersion)" />
-		<PackageVersion Include="Testcontainers.Redis" Version="$(TestcontainersVersion)" />
-		<PackageVersion Include="Testcontainers.Azurite" Version="$(TestcontainersVersion)" />
-		<PackageVersion Include="Testcontainers.PostgreSql" Version="$(TestcontainersVersion)" />
 		<!-- Testkits -->
 		<PackageVersion Include="AutoBogus.Moq" Version="2.13.1" />
 		<PackageVersion Include="ReportGenerator" Version="5.3.4" />
@@ -87,6 +81,11 @@
 		<!-- Polly -->
 		<PackageVersion Include="Polly" Version="$(PollyVersion)" />
 		<PackageVersion Include="Polly.Extensions" Version="$(PollyVersion)" />
+		<!-- Web Utils -->
+		<PackageVersion Include="Htmx" Version="1.8.0" />
+		<PackageVersion Include="Htmx.TagHelpers" Version="1.8.0" />
+		<PackageVersion Include="WebEssentials.AspNetCore.PWA" Version="1.0.85" />
+		<PackageVersion Include="LigerShark.WebOptimizer.Core" Version="3.0.405" />
 		<!-- Miscellaneous -->
 		<PackageVersion Include="Dapper" Version="2.1.35" />
 		<PackageVersion Include="Scrutor" Version="4.2.2" />
@@ -101,8 +100,6 @@
 		<PackageVersion Include="Quartz.Extensions.Hosting" Version="3.9.0" />
 		<PackageVersion Include="SonarAnalyzer.CSharp" Version="9.25.1.91650" />
 		<PackageVersion Include="FluentValidation.AspNetCore" Version="11.3.0" />
-		<PackageVersion Include="WebEssentials.AspNetCore.PWA" Version="1.0.85" />
-		<PackageVersion Include="LigerShark.WebOptimizer.Core" Version="3.0.405" />
 		<PackageVersion Include="Duende.IdentityServer.AspNetIdentity" Version="7.0.4" />
 		<PackageVersion Include="MicroElements.Swashbuckle.FluentValidation" Version="6.0.0" />
 	</ItemGroup>
