--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -2,9 +2,9 @@
 	<PropertyGroup>
 		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
 		<CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
-		<AspnetVersion>8.0.5</AspnetVersion>
+		<AspnetVersion>8.0.6</AspnetVersion>
 		<ApiVersioningVersion>8.1.0</ApiVersioningVersion>
-		<EfVersion>8.0.5</EfVersion>
+		<EfVersion>8.0.6</EfVersion>
 		<XabarilVersion>8.0.1</XabarilVersion>
 		<PollyVersion>8.4.0</PollyVersion>
 		<AspireVersion>8.0.1</AspireVersion>
@@ -90,6 +90,7 @@
 		<PackageVersion Include="Dapper" Version="2.1.35" />
 		<PackageVersion Include="Scrutor" Version="4.2.2" />
 		<PackageVersion Include="MediatR" Version="12.2.0" />
+		<PackageVersion Include="Nuke.Common" Version="8.0.0" />
 		<PackageVersion Include="Stripe.net" Version="44.9.0" />
 		<PackageVersion Include="Serilog.AspNetCore" Version="8.0.1" />
 		<PackageVersion Include="FluentEmail.Mailtrap" Version="2.7.0" />
