--- a/package.json
+++ b/package.json
@@ -11,12 +11,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@types/bun": "latest",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+    "husky": "^9.0.11"
   },
   "lint-staged": {
     "*.cs": "dotnet format --include"
