--- a/ui/backoffice/package.json
+++ b/ui/backoffice/package.json
@@ -71,14 +71,15 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
-    "next-auth": "^5.0.0-beta.18",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.12",
+    "oidc-client-ts": "^3.0.1",
     "rate-limiter-flexible": "^5.0.3",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-oidc-context": "^3.1.0",
     "react-resizable-panels": "^2.0.18",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
