feat: handler oidc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
   "sonarlint.connectedMode.project": {
     "connectionId": "foxminchan",
     "projectKey": "foxminchan_RookieShop"
-  }
+  },
+  "cSpell.words": ["oidc"]
 }
