--- a/ui/backoffice/.env.example
+++ b/ui/backoffice/.env.example
@@ -1,3 +1,7 @@
-AUTH_DUENDE_IDENTITY_SERVER6_ID=
-AUTH_DUENDE_IDENTITY_SERVER6_SECRET=
-AUTH_SECRET=
+NEXT_PUBLIC_DUENDE_CLIENT_ID=
+NEXT_PUBLIC_DUENDE_CLIENT_SECRET=
+NEXT_PUBLIC_DUENDE_CLIENT_SCOPE=
+NEXT_PUBLIC_REDIRECT_URI=
+NEXT_PUBLIC_POST_LOGOUT_REDIRECT_URI=
+NEXT_PUBLIC_RESPONSE_TYPE=
+PORT=
