--- a/ui/storefront/appsettings.Development.json
+++ b/ui/storefront/appsettings.Development.json
@@ -8,5 +8,8 @@
   "OpenIdSettings": {
     "ClientId": "store-front",
     "ClientSecret": "secret"
+  },
+  "SmartComponents": {
+    "DeploymentName": "gpt-4"
   }
 }
