--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -86,6 +86,8 @@
 		<PackageVersion Include="Htmx.TagHelpers" Version="1.8.0" />
 		<PackageVersion Include="WebEssentials.AspNetCore.PWA" Version="1.0.85" />
 		<PackageVersion Include="LigerShark.WebOptimizer.Core" Version="3.0.405" />
+		<PackageVersion Include="SmartComponents.AspNetCore" Version="0.1.0-preview10148" />
+		<PackageVersion Include="SmartComponents.Inference.OpenAI" Version="0.1.0-preview10148" />
 		<!-- Miscellaneous -->
 		<PackageVersion Include="Dapper" Version="2.1.35" />
 		<PackageVersion Include="Scrutor" Version="4.2.2" />
