--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "connectionId": "foxminchan",
     "projectKey": "foxminchan_RookieShop"
   },
-  "cSpell.words": ["oidc"]
+  "cSpell.words": ["oidc"],
+  "typescript.enablePromptUseWorkspaceTsdk": true
 }
