--- a/ui/backoffice/package.json
+++ b/ui/backoffice/package.json
@@ -14,7 +14,8 @@
     "start": "next start",
     "lint": "next lint",
     "ssl": "dotnet dev-certs https -ep ./certificates/aspnet_https.crt --format PEM",
-    "format": "bun prettier . --write",
+    "format:write": "bun prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
+    "format:check": "bun prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
     "test": "jest",
     "test:watch": "jest --watch",
     "cypress:open": "cypress open"
@@ -89,6 +90,7 @@
     "zod": "^3.22.5"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@tailwindcss/typography": "^0.5.13",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
