--- a/ui/backoffice/package.json
+++ b/ui/backoffice/package.json
@@ -13,7 +13,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "ssl": "dotnet dev-certs https -ep ./certificates/aspnet_https.crt --format PEM",
+    "ca": "dotnet dev-certs https -ep ./certificates/aspnet_https.crt --format PEM",
     "format:write": "bun prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
     "format:check": "bun prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
     "test": "jest",
@@ -58,7 +58,6 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-table": "^8.16.0",
-    "@types/uuid": "^9.0.8",
     "@typescript-eslint/parser": "^7.10.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
@@ -98,6 +97,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "cypress": "^13.10.0",
     "eslint": "^9",
     "eslint-config-next": "14.2.3",
