--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -76,8 +76,9 @@
 		<!-- Testkits -->
 		<PackageVersion Include="AutoBogus.Moq" Version="2.13.1" />
 		<PackageVersion Include="ReportGenerator" Version="5.3.4" />
-		<PackageVersion Include="FluentAssertions" Version="6.12.0" />
 		<PackageVersion Include="NetArchTest.Rules" Version="1.3.2" />
+		<PackageVersion Include="FluentAssertions" Version="6.12.0" />
+		<PackageVersion Include="FluentAssertions.Analyzers" Version="0.32.0" />
 		<!-- Polly -->
 		<PackageVersion Include="Polly" Version="$(PollyVersion)" />
 		<PackageVersion Include="Polly.Extensions" Version="$(PollyVersion)" />
