--- a/tests/RookieShop.UnitTests/RookieShop.UnitTests.csproj
+++ b/tests/RookieShop.UnitTests/RookieShop.UnitTests.csproj
@@ -12,6 +12,7 @@
 		<PackageReference Include="xunit.runner.visualstudio" />
 		<PackageReference Include="AutoBogus.Moq" />
 		<PackageReference Include="FluentAssertions" />
+		<PackageReference Include="FluentAssertions.Analyzers" />
 		<PackageReference Include="ReportGenerator" />
 	</ItemGroup>
 
