--- a/src/RookieShop.Infrastructure/RookieShop.Infrastructure.csproj
+++ b/src/RookieShop.Infrastructure/RookieShop.Infrastructure.csproj
@@ -24,6 +24,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Marten" />
 		<PackageReference Include="Scrutor" />
 		<PackageReference Include="Stripe.net" />
 		<PackageReference Include="Quartz.Extensions.Hosting" />
