--- a/ui/storefront/package.json
+++ b/ui/storefront/package.json
@@ -4,12 +4,25 @@
   "license": "MIT",
   "author": {
     "name": "Nhan Nguyen",
-    "email": "nguyenxuannhan407@gmail.com"
+    "email": "nguyenxuannhan407@gmail.com",
+    "url": "https://github.com/foxminchan"
   },
   "description": "A project developed by a rookie transitioning to an engineer at NashTech",
   "type": "module",
   "scripts": {
     "css:build": "bun run tailwind -i ./wwwroot/css/site.css -o ./wwwroot/css/output.css"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
     "@types/bun": "latest",
