feat: add reverse proxy

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -42,7 +42,8 @@
         "ms-dotnettools.vscodeintellicode-csharp",
         "bradlc.vscode-tailwindcss",
         "dsznajder.es7-react-js-snippets",
-        "redhat.vscode-yaml"
+        "redhat.vscode-yaml",
+        "GitHub.vscode-github-actions"
       ]
     }
   }
