--- a/src/RookieShop.AppHost/appsettings.Development.json
+++ b/src/RookieShop.AppHost/appsettings.Development.json
@@ -5,5 +5,83 @@
       "Microsoft.AspNetCore": "Warning",
       "Aspire.Hosting.Dashboard": "Warning"
     }
+  },
+  "ReverseProxy": {
+    "Clusters": {
+      "apiService": {
+        "Destinations": {
+          "apiService": {
+            "Address": "http://api-service"
+          }
+        }
+      },
+      "identityService": {
+        "Destinations": {
+          "identityService": {
+            "Address": "https://identity-service"
+          }
+        }
+      },
+      "backoffice": {
+        "Destinations": {
+          "backoffice": {
+            "Address": "http://backoffice"
+          }
+        }
+      },
+      "storefront": {
+        "Destinations": {
+          "storefront": {
+            "Address": "http://storefront"
+          }
+        }
+      }
+    },
+    "Routes": {
+      "apiService": {
+        "ClusterId": "apiService",
+        "Match": {
+          "Path": "/swagger/{*any}"
+        },
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/api-service"
+          }
+        ]
+      },
+      "identityService": {
+        "ClusterId": "identity-service",
+        "Match": {
+          "Path": "/identity-service/{*any}"
+        },
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/identity-service"
+          }
+        ]
+      },
+      "backoffice": {
+        "ClusterId": "backoffice",
+        "Match": {
+          "Path": "/backoffice/{*any}"
+        },
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/backoffice"
+          }
+        ]
+      },
+      "storefront": {
+        "ClusterId": "storefront",
+        "Match": {
+          "Path": "{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/storefront"
+          }
+        ]
+      }
+    }
   }
 }
