--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
     "ms-dotnettools.vscodeintellicode-csharp",
     "bradlc.vscode-tailwindcss",
     "dsznajder.es7-react-js-snippets",
-    "redhat.vscode-yaml"
+    "redhat.vscode-yaml",
+    "GitHub.vscode-github-actions"
   ]
 }
