--- a/.gitignore
+++ b/.gitignore
@@ -137,9 +137,10 @@ dist
 
 # vuepress build output
 
-**/.vuepress/.cache/
-**/.vuepress/.temp/
-**/.vuepress/dist/
+node_modules/
+docs/.vuepress/.cache/
+docs/.vuepress/.temp/
+docs/.vuepress/dist/
 
 # vuepress v2.x temp and cache directory
 
