--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
   "description": "A project developed by a rookie transitioning to an engineer at NashTech",
   "type": "module",
   "scripts": {
-    "docs:build": "vuepress build docs",
-    "docs:clean-dev": "vuepress dev docs --clean-cache",
-    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress-vite build docs",
+    "docs:clean-dev": "vuepress-vite dev docs --clean-cache",
+    "docs:dev": "vuepress-vite dev docs",
     "docs:update-package": "npx vp-update"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@vuepress/bundler-vite": "2.0.0-rc.12",
     "husky": "^9.0.11",
-    "@vuepress/bundler-vite": "^2.0.0-rc.7",
-    "@vuepress/theme-default": "^2.0.0-rc.11",
-    "vue": "^3.4.0",
-    "vuepress": "^2.0.0-rc.7"
+    "mermaid": "^10.9.1",
+    "vue": "^3.4.27",
+    "vuepress": "2.0.0-rc.12",
+    "vuepress-plugin-search-pro": "^2.0.0-rc.47",
+    "vuepress-theme-hope": "2.0.0-rc.47"
   }
 }
