--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,6 +29,9 @@ jobs:
         with:
           bun-version: "latest"
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Cache .nuke/temp, ~/.nuget/packages
         uses: actions/cache@v2
         with:
