--- a/ui/backoffice/package.json
+++ b/ui/backoffice/package.json
@@ -34,6 +34,8 @@
     ]
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-react": "^7.0.0",
     "@hookform/resolvers": "^3.3.4",
     "@opentelemetry/exporter-trace-otlp-http": "^0.51.1",
     "@opentelemetry/resources": "^1.24.1",
