--- a/ui/backoffice/package.json
+++ b/ui/backoffice/package.json
@@ -104,6 +104,7 @@
     "zod": "^3.22.5"
   },
   "devDependencies": {
+    "@happy-dom/global-registrator": "^14.12.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@tailwindcss/typography": "^0.5.13",
     "@testing-library/jest-dom": "^6.4.5",
