--- a/ui/backoffice/package.json
+++ b/ui/backoffice/package.json
@@ -97,6 +97,7 @@
     "react-hook-form": "^7.51.3",
     "react-oidc-context": "^3.1.0",
     "react-resizable-panels": "^2.0.18",
+    "recharts": "^2.12.7",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
