chore: update package

--- a/src/RookieShop.Application/RookieShop.Application.csproj
+++ b/src/RookieShop.Application/RookieShop.Application.csproj
@@ -15,4 +15,8 @@
 		</PackageReference>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Reports\Queries\CustomersGrownByMonth\" />
+	</ItemGroup>
+
 </Project>
