refactor: change logic payment

--- a/ui/storefront/RookieShop.Storefront.csproj
+++ b/ui/storefront/RookieShop.Storefront.csproj
@@ -10,6 +10,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Stripe.net" />
 		<PackageReference Include="Refit.HttpClientFactory" />
 		<PackageReference Include="Ardalis.Result.AspNetCore" />
 		<PackageReference Include="LigerShark.WebOptimizer.Core" />
