--- a/src/RookieShop.AppHost/appsettings.Development.json
+++ b/src/RookieShop.AppHost/appsettings.Development.json
@@ -63,7 +63,7 @@
       "backoffice": {
         "ClusterId": "backoffice",
         "Match": {
-          "Path": "/backoffice/{*any}"
+          "Path": "{**catch-all}"
         },
         "Transforms": [
           {
@@ -74,7 +74,7 @@
       "storefront": {
         "ClusterId": "storefront",
         "Match": {
-          "Path": "{**catch-all}"
+          "Path": "/storefront/{*any}"
         },
         "Transforms": [
           {
