--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -24,9 +24,6 @@
 		<PackageVersion Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="$(AspireVersion)" />
 		<PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="8.5.0" />
 		<PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="8.0.1" />
-		<!-- Aspirant -->
-		<PackageVersion Include="Aspirant.Hosting.Yarp" Version="0.0.4" />
-		<PackageVersion Include="Aspirant.Hosting.Testing.xunit" Version="0.0.4" />
 		<!-- Ardalis -->
 		<PackageVersion Include="Ardalis.GuardClauses" Version="4.5.0" />
 		<PackageVersion Include="Ardalis.Result.AspNetCore" Version="9.1.0" />
@@ -97,6 +94,9 @@
 		<!-- Data -->
 		<PackageVersion Include="Marten" Version="7.19.1" />
 		<PackageVersion Include="Dapper" Version="2.1.35" />
+		<!-- Dunde -->
+		<PackageVersion Include="Duende.BFF.Yarp" Version="2.2.0" />
+		<PackageVersion Include="Duende.IdentityServer.AspNetIdentity" Version="7.0.5" />
 		<!-- Miscellaneous -->
 		<PackageVersion Include="Scrutor" Version="4.2.2" />
 		<PackageVersion Include="MediatR" Version="12.2.0" />
@@ -110,7 +110,6 @@
 		<PackageVersion Include="Quartz.Extensions.Hosting" Version="3.9.0" />
 		<PackageVersion Include="SonarAnalyzer.CSharp" Version="9.26.0.92422" />
 		<PackageVersion Include="FluentValidation.AspNetCore" Version="11.3.0" />
-		<PackageVersion Include="Duende.IdentityServer.AspNetIdentity" Version="7.0.5" />
 		<PackageVersion Include="MicroElements.Swashbuckle.FluentValidation" Version="6.0.0" />
 	</ItemGroup>
 </Project>
