feat: refactor bff home page

--- a/src/RookieShop.Bff/appsettings.Development.json
+++ b/src/RookieShop.Bff/appsettings.Development.json
@@ -5,17 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  
   "BFF": {
     "ClientId": "bff",
     "ClientSecret": "secret",
-    "Scopes": [ "openid", "profile", "All" ],
-    "Apis": [
-      {
-        "LocalPath": "/api",
-        "RemoteUrl": "https://demo.duendesoftware.com/api/test",
-        "RequiredToken": "User"
-      }
-    ]
+    "Scopes": [ "openid", "profile", "All" ]
   }
 }
