feat: config proxy

--- a/src/RookieShop.Bff/appsettings.Development.json
+++ b/src/RookieShop.Bff/appsettings.Development.json
@@ -1,13 +1,27 @@
 {
+  "BFF": {
+    "ClientId": "bff",
+    "ClientSecret": "secret",
+    "Scopes": [ "openid", "profile", "All" ],
+    "Api": {
+        "LocalPath": "/api",
+        "RequiredToken": "User"
+      }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "BFF": {
-    "ClientId": "bff",
-    "ClientSecret": "secret",
-    "Scopes": [ "openid", "profile", "All" ]
+  "ReverseProxy": {
+    "Routes": {
+      "api": {
+        "ClusterId": "api",
+        "Match": {
+          "Path": "/api/v1/{**catch-all}"
+        }
+      }
+    }
   }
 }
