--- a/src/RookieShop.Bff/appsettings.json
+++ b/src/RookieShop.Bff/appsettings.json
@@ -5,20 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-
-  "BFF": {
-    "Authority": "https://demo.duendesoftware.com",
-    "ClientId": "interactive.confidential",
-
-    "Scopes": [ "openid", "profile", "api", "offline_access" ],
-
-    "Apis": [
-      {
-        "LocalPath": "/api",
-        "RemoteUrl": "https://demo.duendesoftware.com/api/test",
-        "RequiredToken": "User"
-      }
-    ]
-  }
+  "AllowedHosts": "*"
 }
