fix: yarp transform problem

--- a/src/RookieShop.Bff/appsettings.Development.json
+++ b/src/RookieShop.Bff/appsettings.Development.json
@@ -20,6 +20,15 @@
         "ClusterId": "api",
         "Match": {
           "Path": "/api/v1/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/api/v1"
+          }
+        ],
+        "Metadata": {
+          "Duende.Bff.Yarp.TokenType": "User",
+          "Duende.Bff.Yarp.AntiforgeryCheck": "true"
         }
       }
     }
