feat: add some metrics and traces

--- a/src/RookieShop.Infrastructure/RookieShop.Infrastructure.csproj
+++ b/src/RookieShop.Infrastructure/RookieShop.Infrastructure.csproj
@@ -44,6 +44,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\RookieShop.Domain\RookieShop.Domain.csproj" />
+		<ProjectReference Include="..\RookieShop.ServiceDefaults\RookieShop.ServiceDefaults.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
